[package]
name = "web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
futures = "0.3"
rayon = "1.5"
html5ever = "0.26.0"
